--- a/package.json
+++ b/package.json
@@ -3,15 +3,21 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite dev --port 3000",
     "build": "vite build",
-    "serve": "vite preview",
-    "test": "vitest run",
-    "lint": "eslint",
+    "check": "prettier --write . && eslint --fix",
+    "dc:up": "docker compose up",
+    "db:generate": "prisma generate",
+    "db:migrate": "dotenvx run --convention=flow -- prisma migrate",
+    "db:studio": "prisma studio",
+    "dev": "vite dev --port 3000",
     "format": "prettier",
-    "check": "prettier --write . && eslint --fix"
+    "lint": "eslint",
+    "serve": "vite preview",
+    "test": "vitest run"
   },
   "dependencies": {
+    "@dotenvx/dotenvx": "^1.51.1",
+    "@prisma/client": "^6.19.0",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-devtools": "^0.7.0",
     "@tanstack/react-router": "^1.132.0",
@@ -19,8 +25,11 @@
     "@tanstack/react-router-ssr-query": "^1.131.7",
     "@tanstack/react-start": "^1.132.0",
     "@tanstack/router-plugin": "^1.132.0",
+    "better-auth": "^1.3.34",
     "lucide-react": "^0.544.0",
     "nitro": "latest",
+    "pg": "^8.16.3",
+    "prisma": "^6.19.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwindcss": "^4.0.6",
@@ -32,6 +41,7 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
     "@types/node": "^22.10.2",
+    "@types/pg": "^8.15.6",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
     "@vitejs/plugin-react": "^5.0.4",
