--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "db:generate": "prisma generate",
     "db:migrate": "dotenvx run --convention=flow -- prisma migrate",
     "db:studio": "prisma studio",
-    "dev": "vite dev --port 3000",
+    "dev": "dotenvx run --convention=flow -- vite dev --port 3000",
     "format": "prettier",
     "lint": "eslint",
     "serve": "vite preview",
@@ -18,6 +18,7 @@
   "dependencies": {
     "@dotenvx/dotenvx": "^1.51.1",
     "@prisma/client": "^6.19.0",
+    "@radix-ui/react-slot": "^1.2.4",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-devtools": "^0.7.0",
     "@tanstack/react-router": "^1.132.0",
@@ -26,12 +27,15 @@
     "@tanstack/react-start": "^1.132.0",
     "@tanstack/router-plugin": "^1.132.0",
     "better-auth": "^1.3.34",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.544.0",
     "nitro": "latest",
     "pg": "^8.16.3",
     "prisma": "^6.19.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.0.6",
     "vite-tsconfig-paths": "^5.1.4"
   },
@@ -47,6 +51,7 @@
     "@vitejs/plugin-react": "^5.0.4",
     "jsdom": "^27.0.0",
     "prettier": "^3.5.3",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.7.2",
     "vite": "^7.1.7",
     "vitest": "^3.0.5",
