--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^19.2.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.0.6",
+    "uuid": "^13.0.0",
     "vite-tsconfig-paths": "^5.1.4",
     "zod": "^4.1.12"
   },
@@ -52,6 +53,7 @@
     "@types/pg": "^8.15.6",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
+    "@types/uuid": "^11.0.0",
     "@vitejs/plugin-react": "^5.0.4",
     "jsdom": "^27.0.0",
     "prettier": "^3.5.3",
