--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "better-auth": "^1.3.34",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "decimal.js": "^10.6.0",
     "lucide-react": "^0.544.0",
     "nitro": "latest",
     "pg": "^8.16.3",
@@ -53,7 +54,6 @@
     "@types/pg": "^8.15.6",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
-    "@types/uuid": "^11.0.0",
     "@vitejs/plugin-react": "^5.0.4",
     "jsdom": "^27.0.0",
     "prettier": "^3.5.3",
