--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "prisma": "^6.19.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "recharts": "^3.4.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.0.6",
     "uuid": "^13.0.0",
