--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "decimal.js": "^10.6.0",
+    "es-toolkit": "^1.42.0",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.554.0",
     "nitro": "latest",
     "pg": "^8.16.3",
