--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@tanstack/react-router-ssr-query": "^1.139.1",
     "@tanstack/react-start": "^1.139.2",
     "@tanstack/router-plugin": "^1.139.1",
+    "babel-plugin-react-compiler": "^1.0.0",
     "better-auth": "^1.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
