--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "vite build",
     "check": "prettier --write . && eslint --fix",
     "dc:up": "docker compose up",
-    "db:generate": "prisma generate",
+    "db:generate": "dotenvx run --convention=flow -- prisma generate",
     "db:migrate": "dotenvx run --convention=flow -- prisma migrate",
     "db:studio": "prisma studio",
     "dev": "dotenvx run --convention=flow -- vite dev --port 3000",
@@ -18,7 +18,8 @@
   "dependencies": {
     "@dotenvx/dotenvx": "^1.51.1",
     "@js-temporal/polyfill": "^0.5.1",
-    "@prisma/client": "^6.19.0",
+    "@prisma/adapter-pg": "^7.0.0",
+    "@prisma/client": "^7.0.0",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.8",
@@ -41,7 +42,6 @@
     "lucide-react": "^0.554.0",
     "nitro": "latest",
     "pg": "^8.16.3",
-    "prisma": "^6.19.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "recharts": "^3.4.1",
@@ -63,6 +63,8 @@
     "@vitejs/plugin-react": "^5.0.4",
     "jsdom": "^27.0.0",
     "prettier": "^3.5.3",
+    "prisma": "^7.0.0",
+    "tsx": "^4.20.6",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.7.2",
     "vite": "^7.1.7",
