--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   postgres:
-    image: postgres:18-alpine
+    image: postgres:18
     restart: unless-stopped
     ports:
       - "5432:5432"
@@ -9,7 +9,8 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: debt_calculator_dev
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_data1:/var/lib/postgresql/18/main
+
     tmpfs:
       - /tmp
     healthcheck:
@@ -37,4 +38,4 @@ services:
         condition: service_healthy
 
 volumes:
-  postgres_data:
+  postgres_data1:
